Added basic structure for index.html file

--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Interested? Sign-up!</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
+  <link rel="stylesheet" media="screen" href="css/screen.css" />
+</head>
+<body>
+<main id="content">
+  <h1>Hello, fill out the form to sign-up!</h1>
+  <form action="#null" method="post">
+    <input type="email" name="email" id="email" />
+    <input type="submit" />
+  </form>
+</main>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="js/site.js"></script>
+</body>
+</html>
