Added in images to the unordered list

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <main id="content">
   <h1>Why join?</h1>
   <ul class="reasons-list">
-      <li>News from over 50+ design sites</li>
-      <li>Delivered every Monday</li>
-      <li>Quick tips</li>
-      <li>Easy and enjoyable read. </li>
+      <li><img src="images/news.png">News from over 50+ design sites</li>
+      <li><img src="images/calendar.png">Delivered every Monday</li>
+      <li><img src="images/bulb.png">Quick tips</li>
+      <li><img src="images/glasses.png">Easy and enjoyable read. </li>
   </ul>
   <form action="#null" method="post" class="register">
     <div class="name">
