Added alt tags for the images

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <main id="content">
   <h1>Why join?</h1>
   <ul class="reasons-list">
-      <li><img src="images/news.png">News from over 50+ design sites</li>
-      <li><img src="images/calendar.png">Delivered every Monday</li>
-      <li><img src="images/bulb.png">Quick tips</li>
-      <li><img src="images/glasses.png">Easy and enjoyable read. </li>
+      <li class="news-li"><img src="images/news.png" alt="news-icon" class="news">News from over 50+ design sites</li>
+      <li><img src="images/calendar.png" alt="calendar-icon" class="calendar">Delivered every Monday</li>
+      <li><img src="images/bulb.png" alt="bulb-icon" class="tips">Quick tips</li>
+      <li><img src="images/glasses.png" alt="glasses-icon" class="read">Easy and enjoyable read. </li>
   </ul>
   <form action="#null" method="post" class="register">
     <div class="name">
