Closed void elements

--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
   <title>Interested? Sign-up!</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
-  <link href="https://fonts.googleapis.com/css?family=Nunito:300,400,700" rel="stylesheet">
-  <link rel="stylesheet" media="screen" href="css/screen.css" />
+  <link href="https://fonts.googleapis.com/css?family=Nunito:300,400,700" rel="stylesheet"/>
+  <link rel="stylesheet" media="screen" href="css/screen.css"/>
 </head>
 <body>
 <main id="content">
   <h1>Why join?</h1>
   <ul class="reasons-list">
-      <li class="news-li"><img src="images/news.png" alt="news-icon" class="news">News from over 50+ design sites</li>
-      <li><img src="images/calendar.png" alt="calendar-icon" class="calendar">Delivered every Monday</li>
-      <li><img src="images/bulb.png" alt="bulb-icon" class="tips">Quick tips</li>
-      <li><img src="images/glasses.png" alt="glasses-icon" class="read">Easy and enjoyable read. </li>
+      <li class="news-li"><img src="images/news.png" alt="news-icon" class="news"/>News from over 50+ design sites</li>
+      <li><img src="images/calendar.png" alt="calendar-icon" class="calendar"/>Delivered every Monday</li>
+      <li><img src="images/bulb.png" alt="bulb-icon" class="tips"/>Quick tips</li>
+      <li><img src="images/glasses.png" alt="glasses-icon" class="read"/>Easy and enjoyable read.</li>
   </ul>
   <form action="#null" method="post" class="register">
     <div class="name">
@@ -26,7 +26,7 @@
         <input type="email" id="email" name="Email" placeholder="We-won't@spam.you" required />
     </div>
     <div class="submit-button">
-        <input type="submit" value ="Sign-up" class="button">
+        <input type="submit" value ="Sign-up" class="button"/>
     </div>
   </form>
 </main>
