Added in a copy of what users are signing up for

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
 <main id="content">
   <h1>Why join?</h1>
+  <p>Why sign up for a bunch of design newsletters and keep your inbox messy? At Dezine we search far and wide to find the best web design news, trends, freebies, tips &amp; tricks in one newsletter. Oh by the way, did we mention it's free? </p>          
   <ul class="reasons-list">
       <li class="news-li"><img src="images/news.png" alt="news-icon" class="news"/>News from over 50+ design sites</li>
       <li><img src="images/calendar.png" alt="calendar-icon" class="calendar"/>Delivered every Monday</li>
