--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
   <link href="https://fonts.googleapis.com/css?family=Nunito:300,400,700" rel="stylesheet"/>
   <link rel="stylesheet" media="screen" href="css/screen.css"/>
+  <link rel="stylesheet" media="screen" href="vendors/ionicons.css"/>
 </head>
 <body>
 <main id="content">
