Removed the images from the list

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   <p class="copy">Why sign up for a bunch of design newsletters and keep your inbox messy? At Dezine we search far and wide to find the best web design news, trends, freebies, tips &amp; tricks in one newsletter.</p> 
   <p class="question">Oh by the way, did we mention it's free?</p>    
   <ul class="reasons-list">
-      <li class="news-li"><img src="images/news.png" alt="news-icon" class="news"/>News from over 50+ design sites</li>
-      <li><img src="images/calendar.png" alt="calendar-icon" class="calendar"/>Delivered every Monday</li>
-      <li><img src="images/bulb.png" alt="bulb-icon" class="tips"/>Quick tips</li>
-      <li><img src="images/glasses.png" alt="glasses-icon" class="read"/>Easy and enjoyable read.</li>
+      <li class="news-li">News from over 50+ design sites</li>
+      <li>Delivered every Monday</li>
+      <li>Quick tips</li>
+      <li>Easy and enjoyable read.</li>
   </ul>
   <form action="#null" method="post" class="register">
     <div class="name">
