--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
   <link href="https://fonts.googleapis.com/css?family=Nunito:300,400,700" rel="stylesheet"/>
   <link rel="stylesheet" media="screen" href="css/screen.css"/>
-  <link rel="stylesheet" media="screen" href="vendors/ionicons.css"/>
 </head>
 <body>
 <main id="content">
@@ -14,7 +13,7 @@
   <p class="copy">Why sign up for a bunch of design newsletters and keep your inbox messy? At Dezine we search far and wide to find the best web design news, trends, freebies, tips &amp; tricks in one newsletter.</p> 
   <p class="question">Oh by the way, did we mention it's free?</p>    
   <ul class="reasons-list">
-      <li class="news-li">News from over 50+ design sites</li>
+      <li class="news-li"><i class="ion-log-in"></i>News from over 50+ design sites</li>
       <li>Delivered every Monday</li>
       <li>Quick tips</li>
       <li>Easy and enjoyable read.</li>
