--- a/index.html
+++ b/index.html
@@ -13,23 +13,23 @@
   <p class="copy">Why sign up for a bunch of design newsletters and keep your inbox messy? At Dezine we search far and wide to find the best web design news, trends, freebies, tips &amp; tricks in one newsletter.</p> 
   <p class="question">Oh by the way, did we mention it's free?</p>    
   <ul class="reasons-list">
-      <li class="news-li"><i class="ion-log-in"></i>News from over 50+ design sites</li>
-      <li>Delivered every Monday</li>
-      <li>Quick tips</li>
-      <li>Easy and enjoyable read.</li>
+      <li class="news-li"><img src="images/Circle-36.png" class="circle">News from over 50+ design sites</li>
+      <li><img src="images/Circle-36.png" class="circle">Delivered every Monday</li>
+      <li><img src="images/Circle-36.png" class="circle">Quick tips</li>
+      <li><img src="images/Circle-36.png" class="circle">Easy and enjoyable read.</li>
   </ul>
   <form action="#null" method="post" class="register">
-    <div class="name">
+    <span class="name">
         <label for ="name">Name:</label>    
         <input type="text" id="name" name="name" placeholder="Full name" required/>
-    </div>  
-    <div>
+    </span>  
+    <span>
         <label for ="email">E-mail:</label>    
         <input type="email" id="email" name="Email" placeholder="We-won't@spam.you" required />
-    </div>
-    <div class="submit-button">
+    </span>
+    <span class="submit-button">
         <input type="submit" value ="Sign-up" class="button"/>
-    </div>
+    </span>
   </form>
 </main>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
