Added 36 pixel size icon

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <p class="question">Oh by the way, did we mention it's free?</p>    
   <ul class="reasons-list">
       <li class="news-li"><img src="images/Circle-36.png" class="circle">News from over 50+ design sites</li>
-      <li><img src="images/Circle-36.png" class="circle">Delivered every Monday</li>
+      <li><img src0="images/Circle-36.png" class="circle">Delivered every Monday</li>
       <li><img src="images/Circle-36.png" class="circle">Quick tips</li>
       <li><img src="images/Circle-36.png" class="circle">Easy and enjoyable read.</li>
   </ul>
