Added smaller icon size

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <p class="copy">Why sign up for a bunch of design newsletters and keep your inbox messy? At Dezine we search far and wide to find the best web design news, trends, freebies, tips &amp; tricks in one newsletter.</p> 
   <p class="question">Oh by the way, did we mention it's free?</p>    
   <ul class="reasons-list">
-      <li class="news-li"><img src="images/Circle-36.png" class="circle">News from over 50+ design sites</li>
-      <li><img src0="images/Circle-36.png" class="circle">Delivered every Monday</li>
-      <li><img src="images/Circle-36.png" class="circle">Quick tips</li>
-      <li><img src="images/Circle-36.png" class="circle">Easy and enjoyable read.</li>
+      <li class="news-li"><img src="images/Circle-24.png" class="circle">Info from 50+ sites</li>
+      <li><img src="images/Circle-24.png" class="circle">Delivered every Monday</li>
+      <li><img src="images/Circle-24.png" class="circle">Quick tips</li>
+      <li><img src="images/Circle-24.png" class="circle">Easy and enjoyable read.</li>
   </ul>
   <form action="#null" method="post" class="register">
     <span class="name">
