Changed the icons to 24px

--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
   <p class="copy">Why sign up for a bunch of design newsletters and keep your inbox messy? At Dezine we search far and wide to find the best web design news, trends, freebies, tips &amp; tricks in one newsletter.</p> 
   <p class="question">Oh by the way, did we mention it's free?</p>    
   <ul class="reasons-list">
-      <li class="news-li"><img src="images/Circle-24.png" class="circle">Info from 50+ sites</li>
-      <li><img src="images/Circle-24.png" class="circle">Delivered every Monday</li>
-      <li><img src="images/Circle-24.png" class="circle">Quick tips</li>
-      <li><img src="images/Circle-24.png" class="circle">Easy and enjoyable read.</li>
+      <li class="news-li"><img src="images/Circle-24.png" alt="circle-icon" class="circle">Info from 50+ sites</li>
+      <li><img src="images/Circle-24.png" alt="circle-icon" class="circle">Delivered every Monday</li>
+      <li><img src="images/Circle-24.png" alt="circle-icon" class="circle">Quick tips</li>
+      <li><img src="images/Circle-24.png" alt="circle-icon" class="circle">Easy and enjoyable read.</li>
   </ul>
-  <form action="#null" method="post" class="register">
+    <div id="test"></div>
+  <form id="user-form" action="#null" method="get" class="register">
     <span class="name">
         <label for ="name">Name:</label>    
         <input type="text" id="name" name="name" placeholder="Full name" required/>
