Removed the required tag from the input types for name and email

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
   <form id="user-form" action="#null" method="get" class="register">
     <span class="name">
         <label for ="name">Name:</label>    
-        <input type="text" id="name" name="name" placeholder="Full name" required/>
+        <input type="text" id="name" name="name" placeholder="Full name"/>
     </span>  
     <span>
         <label for ="email">E-mail:</label>    
-        <input type="email" id="email" name="Email" placeholder="We-won't@spam.you" required />
+        <input type="email" id="email" name="Email" placeholder="We-won't@spam.you"/>
     </span>
     <span class="submit-button">
         <input type="submit" value ="Sign-up" class="button"/>
