Removed span tags and placed the labels and input types into an ordered list

--- a/index.html
+++ b/index.html
@@ -19,17 +19,15 @@
       <li><img src="images/Circle-24.png" alt="circle-icon" class="circle">Easy and enjoyable read.</li>
   </ul>
   <form id="user-form" action="#null" method="get" class="register">
-    <span class="name">
-        <label for ="name">Name:</label>    
-        <input type="text" id="name" name="name" placeholder="Full name"/>
-    </span>  
-    <span>
-        <label for ="email">E-mail:</label>    
-        <input type="email" id="email" name="Email" placeholder="We-won't@spam.you"/>
-    </span>
-    <span class="submit-button">
-        <input type="submit" value ="Sign-up" class="button"/>
-    </span>
+    <ol> 
+      <label for ="name">Name:</label>    
+      <input type="text" id="name" name="name" placeholder="Full name"/>
+      <label for ="email">E-mail:</label>    
+      <input type="email" id="email" name="Email" placeholder="We-won't@spam.you"/>
+        <li class="submit-button">
+       <input type="submit" value ="Sign-up" class="button"/>
+        </li>    
+    </ol> 
   </form>
 </main>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
