Cleaned up HTML with htmllint

--- a/index.html
+++ b/index.html
@@ -13,20 +13,24 @@
   <p class="copy">Why sign up for a bunch of design newsletters and keep your inbox messy? At Dezine we search far and wide to find the best web design news, trends, freebies, tips &amp; tricks in one newsletter.</p> 
   <p class="question">Oh by the way, did we mention it's free?</p>    
   <ul class="reasons-list">
-      <li class="news-li"><img src="images/Circle-24.png" alt="circle-icon" class="circle">Info from 50+ sites</li>
-      <li><img src="images/Circle-24.png" alt="circle-icon" class="circle">Delivered every Monday</li>
-      <li><img src="images/Circle-24.png" alt="circle-icon" class="circle">Quick tips</li>
-      <li><img src="images/Circle-24.png" alt="circle-icon" class="circle">Easy and enjoyable read.</li>
+      <li class="news-li"><img src="images/Circle-24.png" alt="circle-icon" class="circle" />Info from 50+ sites</li>
+      <li><img src="images/Circle-24.png" alt="circle-icon" class="circle" />Delivered every Monday</li>
+      <li><img src="images/Circle-24.png" alt="circle-icon" class="circle" />Quick tips</li>
+      <li><img src="images/Circle-24.png" alt="circle-icon" class="circle" />Easy and enjoyable read.</li>
   </ul>
   <form id="user-form" action="#null" method="get" class="register">
     <ol> 
-      <label for ="name">Name:</label>    
-      <input type="text" id="name" name="name" placeholder="Full name"/>
-      <label for ="email">E-mail:</label>    
-      <input type="email" id="email" name="Email" placeholder="We-won't@spam.you"/>
-        <li class="submit-button">
-       <input type="submit" value ="Sign-up" class="button"/>
-        </li>    
+      <li>
+        <label for ="name">Name:</label> 
+        <input type="text" id="name" name="name" placeholder="Full name"/>
+      </li>
+      <li>
+        <label for ="email">E-mail:</label>    
+        <input type="email" id="email" name="Email" placeholder="We-won't@spam.you"/>
+      </li>
+      <li class="submit-button">
+        <input type="submit" value ="Sign-up" class="button"/>
+      </li>    
     </ol> 
   </form>
 </main>
